Ensure visible synthesis tag row spacing

--- a/src/styles/synthesize.scss
+++ b/src/styles/synthesize.scss
@@ -173,6 +173,8 @@
 
 .synthesis-tag {
 	max-width: 100%;
+	margin-top: 0;
+	margin-bottom: 0;
 	white-space: normal;
 }
 
